# DEAD

./: CMakeLists.txt  README.md
DEAD/: DEAD.cpp  DEADmain.h
DEAD-Func/: DEADLoadAudio.cpp  DEADLoadAudio.h  DEADOther.cpp  DEADOther.h  DEADPlayAudio.cpp  DEADPlayAudio.h  DEADSetAudio.cpp  DEADSetAudio.h
DEAD-Init/: DEADInit.cpp  DEADInit.h
DEAD-LoadFile/: DEADmp3.cpp  DEADmp3.h  DEADogg.cpp  DEADogg.h  DEADother.cpp  DEADother.h  DEADwav.cpp  DEADwav.h
doc/: README.md
example/: CMakeLists.txt  main.cpp
include/: DEAD.h
src/: DEAD.cpp  DEADmp3.cpp  DEADmp3.h  DEADogg.cpp  DEADogg.h  DEADother.cpp  DEADother.h  DEADwav.cpp  DEADwav.h
